v2.0.x-SNAPSHOT/how-to-guides/admin-guide/persona-landing-page-customization.mdx
---
title: Persona and Landing Page Customization in OpenMetadata
sidebarTitle: Overview
---

# Persona and Landing Page Customization in OpenMetadata

<iframe width="800" height="450" src="https://www.youtube.com/embed/Nh2xLAwY2-A?start=2461&end=2728" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>

## Overview
OpenMetadata is designed as a platform for everyone in your organization, catering to the diverse needs of different users. To achieve this, OpenMetadata introduces **Persona and Landing Page Customization**, offering a personalized experience for each user. By defining personas, administrators can customize the application interface and functionality based on the specific requirements of various roles, such as **data engineers, data scientists, data stewards**, etc. This ensures that each user experiences the platform in a way that aligns with their responsibilities, enhancing productivity by providing relevant information and tools tailored to their daily activities.

## Prerequisites

Users must have the **ViewBasic** permission on the **Document** resource for Persona and Landing Page Customization to work correctly. Without this permission, personas and their customized landing pages might not load as expected.

## Benefits of Persona and Landing Page Customization

- **Persona-Based Personalization**: Users can interact with OpenMetadata based on their selected persona, allowing them to switch between different perspectives to access the most relevant data and tools for their needs. This flexibility helps improve productivity and focus by tailoring the experience to match the user's current tasks and responsibilities.

- **Customizable Landing Pages**: Each persona can have a tailored landing page, displaying relevant panels like recent views, announcements, tasks, and performance indicators based on the user’s role.

<img src="/public/images/how-to-guides/admin-guide/benefit-1.png" alt="Customizable Landing Pages" />

- **Flexibility for Multiple Personas**: Users can switch between different personas (e.g., a user can be both a data engineer and a data steward), and the application will adapt the layout and functionality accordingly.

<img src="/public/images/how-to-guides/admin-guide/switch-1.png" alt="Flexibility for Multiple Personas" />
